case_studies/1_Small_Company/iptables.rules
### NAT rules ###
*nat
# Default policy ACCEPT in nat chains
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Requirement 2: Redirect incoming SSH and HTTPS connections to hosts 10.0.1.15 and 10.0.1.16 (DNAT)
-A PREROUTING -p tcp -d 172.16.1.5 --dport  22 -j DNAT --to 10.0.1.15
-A PREROUTING -p tcp -d 172.16.1.5 --dport  80 -j DNAT --to 10.0.1.16
-A PREROUTING -p tcp -d 172.16.1.5 --dport 443 -j DNAT --to 10.0.1.16

# Requirement 4: Connections towards the Internet exit with source address 172.16.1.5 (SNAT)
-A POSTROUTING -s 10.0.0.0/8 ! -d 10.0.0.0/8 -j SNAT --to 172.16.1.5

COMMIT

### Filtering rules ###
*filter
# Default policy DROP in filtering chains
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Allow established packets
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A INPUT   -m state --state ESTABLISHED -j ACCEPT

# Requirement 1: Allow arbitrary traffic between internal networks
-A FORWARD -s 10.0.0.0/8 -d 10.0.0.0/8 -j ACCEPT

# Requirement 3: Allow HTTP/HTTPS outgoing traffic
-A FORWARD -s 10.0.0.0/8 -p tcp --dport  80 -j ACCEPT
-A FORWARD -s 10.0.0.0/8 -p tcp --dport 443 -j ACCEPT

# Requirement 2: Allow SSH/HTTPS incoming traffic to the corresponding hosts
-A FORWARD -p tcp -d 10.0.1.15 --dport  22 -j ACCEPT
-A FORWARD -p tcp -d 10.0.1.16 --dport  80 -j ACCEPT
-A FORWARD -p tcp -d 10.0.1.16 --dport 443 -j ACCEPT

COMMIT
